instance.tf
resource "aws_instance" "web" {
    ami                    = var.amiID[var.region]
    instance_type          = "t3.micro"
    key_name               = "dove-key"
    vpc_security_group_ids = [aws_security_group.dove-sg.id]
    availability_zone      = var.zone1
    
    # Upload the shell script to the instance
    provisioner "file" {
      source      = "web.sh"
      destination = "/tmp/web.sh"
    }
     provisioner "local-exec" {
      command = "echo ${self.private_ip} >> private_ips.txt"
    }

  
    # How to connect to the instance via SSH
    connection {
      type        = "ssh"
      user        = var.webuser
      private_key = file("dovekey")
      host        = self.public_ip
    }
  
    # Run commands on the instance remotely
    provisioner "remote-exec" {
      inline = [
        "chmod +x /tmp/web.sh",
        "sudo /tmp/web.sh"
      ]
    }

    tags = {
      Name    = "Dove-web"
      Project = "Dove"
    }
  }
  
  resource "aws_ec2_instance_state" "web-state" {
    instance_id = aws_instance.web.id
    state       = "running"
  }

  output "WebPublicIP" {
    description = "Public IP of the web instance"
    value       = aws_instance.web.public_ip
  }
  
  output "WebPrivateIP" {
    description = "Private IP of the web instance"
    value       = aws_instance.web.private_ip
  }
